[package]
name = "duplicates"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
md-5 = "0.10"
crc32fast = "1.3"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
indicatif = "0.17"
rayon = "1.8"
chrono = "0.4"
sysinfo = "0.30"
hex = "0.4"
anyhow = "1.0"
colored = "2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase"] }
